Attempt to fix most of what's missing

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -17,6 +17,8 @@
 
 <body>
   <div class="container">
+    
+
     <header>
       <a id="top"></a>
       <nav class="navbar navbar-inverse">
@@ -26,17 +28,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+
           </button>
-          <img src="pcbsLogoPoleWh.png" alt="logo" width="200" height="75">
+          <img src="pcbsLogoPoleWh.png" alt="logo" class="header-logo" width="200" height="75">
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#services" class="text header-text btn-link services">Services</a></li>
-            <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#myModal">Hours</a></li>
-            <li><a href="#location" class="text header-text btn-link">Location</a></li>
+            <li><a href="#services"     class="text header-text btn-link">Services</a></li>
+            <li><a href="#button"       class="text header-text btn-link" data-toggle="modal" data-target="#myModal">Hours</a></li>
+            <li><a href="#location"     class="text header-text btn-link">Location</a></li>
             <li><a href="#testimonials" class="text header-text btn-link">Testimonials</a></li>
-            <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#contact-modal">Contact us</a></li>
+            <li><a href="#button"       class="text header-text btn-link" data-toggle="modal" data-target="#contact-modal">Contact us</a></li>
           </ul>
           </li>
         </div>
@@ -119,6 +122,7 @@
                   <h1 class="contact-title">Send us a message:</h1>
                   <div class="contact-loading"></div>
                   <div class="contact-message"></div>
+
                   <form action="#">
                     <label for="contact-name">*Name:</label>
                     <input name="name" tabindex="1001" class="contact-input" id="contact-name" type="text">
@@ -143,18 +147,16 @@
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
-
                 </form>
+
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </nav>
-</header>
-<hr>
+      </nav>
+    </header>
+    <hr>
 
     <section>
       <div class="row">
@@ -402,6 +404,7 @@
 	<section>
 			<a id="location"></a>
 			<div id="map-canvas"></div>
+      <br>
 		<div class="shop-info">
 			<p class="shop-address pcbs"><span class="patriot">Patriot</span> Cuts <span class="bs">Barber Shop</span></p>
 			<p class="shop-address">3246 Broadway Street</p>
@@ -419,16 +422,17 @@
                 <img src="img/MasterCard.png" style="width:3em; height:2em;" alt="MasterCard">
                 <img src="img/Visa(Inverted).png" style="width:3em; height:2em;" alt="Visa">
               </p>
+              <br>
               <hr>
             </div>
     </div>
   </section>
-  			<!-- <a href="#top" class="return-top">Back to Top</a>  -->
 
     <!--  Testimonials  START -->
+  			<a href="#top" class="return-top">Back to Top</a> 
     <a id="testimonials"></a>
     <h1 id="quote-title">What people are saying<h1>
-<div class="container">
+<!-- <div class="container"> -->
   <div class="row">
     <div class="col-md-12">
       <div class="carousel slide" data-ride="carousel" id="quote-carousel">
@@ -535,7 +539,6 @@
 <!-- </section> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="js/lightbox.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?AIzaSyDrJtDlJgRpm1HBbRhYMy_2oTW_TFm35Rg"></script>
   <script type="text/javascript">
       "use strict";
