--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -410,7 +410,7 @@
 			<br>
       <div class="creditCards">
               <p>
-                We except the following Cedit Cards:
+                We accept the following Credit Cards:
               </p>
               <p>
                 <img src="img/AmericanExpress.png" style="width:3em; height:2em;" alt="American Express">
