fixed spelling error on testimonial for John

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -482,7 +482,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                  <p>Very nice and courteous barber.Haircut is always consistant.Best barber for military style haircuts.
+                  <p>Very nice and courteous barber.Haircut is always consistent. Best barber for military style haircuts.
                   </p>
                   <important>- John L.</important>
                 </div>
@@ -516,8 +516,8 @@
   <div class="footer">
     <a href="https://www.facebook.com/Patriot-Cuts-Barber-Shop-913818735332593/info?tab=overview" title="Facebook" target="_blank"><img src="img/Facebook.png" style="width:2em; height:2em;"></img>
     </a>
-    <a href="http://www.gmail.com" title="Gmail" target="_blank"><img src="img/Gmail.png" style="width:2em; height:2em;"></img>
-    </a>
+    <!-- <a href="http://www.gmail.com" title="Gmail" target="_blank"><img src="img/Gmail.png" style="width:2em; height:2em;"></img>
+    </a> -->
     <a href="https://plus.google.com/116352937320744275256/about" title="Google" target="_blank"><img src="img/Google+.png" style="width:2em; height:2em;"></img>
     </a>
     <a href="http://www.yellowpages.com/san-antonio-tx/mip/patriot-cuts-barber-shop-516405855?lid=516405855" title="Yellow Pages" target="_blank"><img src="img/YellowPages.png" style="width:2em; height:2em;"></img>
