removed class of store title to alter color with css

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -405,7 +405,7 @@
 			<div id="map-canvas"></div>
       <br>
 		<div class="shop-info">
-			<p class="shop-address pcbs"><span class="patriot">Patriot</span> Cuts <span class="bs">Barber Shop</span></p>
+			<p class="pcbs"><span class="patriot">Patriot</span> Cuts <span class="bs">Barber Shop</span></p>
 			<p class="shop-address">3246 Broadway Street</p>
 			<p class="shop-address">San Antonio, TX., 78209 </p>
 			<p class="phone-number">phone: (210) 822-0780</p>
