added a space in John quote

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -484,7 +484,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                  <p>Very nice and courteous barber.Haircut is always consistent. Best barber for military style haircuts.
+                  <p>Very nice and courteous barber. Haircut is always consistent. Best barber for military style haircuts.
                   </p>
                   <important>- John L.</important>
                 </div>
@@ -580,6 +580,7 @@
       });
       var mapOptions = {
         zoom: 17,
+        scrollwheel: false,
         center: {
           lat: 29.458050,
           lng: -98.469432
